added Framework description

--- a/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/programmiersprachen.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/programmiersprachen.tex
@@ -6,7 +6,7 @@ Android Studio ist die offizielle Entwicklungsumgebung für Android Applikatione
 Android Studio basiert auf IntelliJ IDEA und ersetzt das Android Developer Tool für Eclipse, da dieses seit Ende
 2015 keinen Support mehr erhält.
 
-\textbf{Programmiersprachen}
+\textbf{Programmiersprachen\newline}
 Bei den Programmiersprachen bestand die Auswahl zwischen der Programmiersprache Python, 
 native Javaentwicklung und Hybrid Java in Verbindung mit HTML.
 Dabei fiel für uns vor allem aufgrund von der Verbindung mit einer Webapplikation die Wahl auf eine hybride Applikation. 
@@ -23,7 +23,7 @@ Der Funktionsumfang des Android Studios sind:
 \item ProGuard: Automatische App-Signierung
 \end{itemize}
 
-\textbf{Systemvoraussetzungen}
+\textbf{Systemvoraussetzungen\newline}
 \begin{itemize}
 \item mind. 2GB RAM, 4 GB empfohlen
 \item mind. 400MB freien Speicherplatz (1GB für die Android SDK)
@@ -33,6 +33,8 @@ Der Funktionsumfang des Android Studios sind:
 \end{itemize}
 
 \newpage
+
+
 \subsection{Vergleich Java und Python}
 \subsubsection{Java}
 \begin{itemize}
@@ -62,6 +64,19 @@ wodurch Java nativ auf Android realisiert wird im Gegensatz zu Python.
 Dementsprechend wird hier massiv an Umkompilierungszeit gespart, welche für die Echtzeit-Darstellung des Verbrauchs, 
 Kamm'schen Kreises und Schaltvorschlags essentiell ist.
 \subsection{Java-Frameworks(APP)}
+\textbf{Frameworks im Allgemeinen\newline}
+Ein Softwareentwickler stößt relativ schnell während seiner Ausbildung
+auf das Wort "Framework". Die Übersetzung ins Deutsche entspricht der selben
+Bedeutung eines Bilderrahmens oder Gerüstes.
+Ein Framework ist ein Vorgefertigter Baustein, der das Programmieren erleichtern und dadurch
+Zeit einsparen soll.
+Vorteile von Frameworks:
+\begin{itemize}
+\item Ein Framework besitzt genormte Schnittstellen wie zum Beispiel zu Datenbanken, welche die Kommunikation vereinfacht. 
+\item Wiederverwendung von Programmen 
+\item Erleichterung der Programmierarbeit
+\item Einsparung von viel Zeit
+\end{itemize}
 \newline
 \begin{table}[!htb]
 \centering
