--- a/diplomarbeit/sections/ch3_implementierung/android-app.tex
+++ b/diplomarbeit/sections/ch3_implementierung/android-app.tex
@@ -45,7 +45,8 @@ Die Klasse hat einen Konstruktor, welcher von der Superklasse das FragementManag
 Weiters hat die Klasse eine getItem Methode mit dem Input eines int Wertes. 
 \lstinputlisting[caption=PageAdapter, style=javastyle]{code/FragementPageAdapter.java}
 
-Hierbei wird nur geprüft welcher Tab angeklickt wurde dem teilt er eine Klasse auf welche eine eigene View hat. \comment{SIMR: Es wird hierbei überprüft ob, welcher Tab aktiviert wurde, wessen Klasse retourniert wird. So vllt?}
+
+Es wird hierbei überprüft ob, welcher Tab aktiviert wurde, und der wird der entsprechenden Klasse eingeteilt. 
 Sie hat noch eine getCount() Methode, welche die Anzahl der Tabs zurückgibt in unserem Fall 3.
 
 
@@ -55,31 +56,6 @@ Wir erstellen auf der Main Klasse zwei Objekte, nämlich:
 Dies wird gemacht um zwischen den Oberflächen wechseln zu können.
 
  
-\subsubsection{MPAndroidchart als Tool}
-Um die zwei Grafiken für den Emissionsausstoss und die Längsbeschleunigung darzustellen, haben wir uns für ein Framework entschieden welches uns diese Aufgabe erleichtern sollte.
-
- \begin{table}[!htb]
- 	\centering
- 	\caption{Vergleich der Charting-Frameworks}
- 	\label{comparisonCharting}
- 	\resizebox{\columnwidth}{!}{%
- 		\begin{tabular}{l|c|c|c|l|}
- 			\cline{2-5}
- 			& \begin{tabular}[c]{@{}c@{}}MPAndorid\\ Chart\end{tabular} & \begin{tabular}[c]{@{}c@{}}AChart\\ Engine\end{tabular} & HelloChart & ErklÃ€rung \\ \hline
- 			\multicolumn{1}{|l|}{Performance} & Gut & Gut & Gut &  \\ \hline
- 			\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Supported \\ Languages\end{tabular}} & \begin{tabular}[c]{@{}c@{}}iOS 7,8;\\ Java\end{tabular} & Java & Java & \begin{tabular}[c]{@{}l@{}}MPAC kann auch\\ weiterverwendet werden\\ fÃŒr eine iOS App\end{tabular} \\ \hline
- 			\multicolumn{1}{|l|}{Documentation} & 85\% & 70\% & 50\% & \begin{tabular}[c]{@{}l@{}}MPAC hat eine sehr gute\\ in Kapiteln aufgelistete\\ Dokumentation, Tutorials\end{tabular} \\ \hline
- 			\multicolumn{1}{|l|}{Recent activity} & 19.10.2015 & 26.07.2013 & 5.10.2015 & \begin{tabular}[c]{@{}l@{}}MPAC ist sehr aktuell\\ und bringt immer wieder \\ neue Bugfixes raus.\\ HelloChart ebenso.\end{tabular} \\ \hline
- 			\multicolumn{1}{|l|}{Community} & 80\% & 60\% & 20\% & \begin{tabular}[c]{@{}l@{}}Bei MPAC und \\ AChartEngine wird eine\\ Antwort innerhalb von 7 \\ Tagen geliefert.\\ Eine Community bei Hello\\ Chart ist kaum vorhanden.\end{tabular} \\ \hline
- 			\multicolumn{1}{|l|}{Usage examples} & 85\% & 70\% & 15\% & \begin{tabular}[c]{@{}l@{}}MPAC hat fÃŒr jeden Chart\\ ein eigenes Beispiel oder \\ auch Tutorials auf YouTube.\\ AChartEngine weniger \\ verwendbare Codebeispiele.\end{tabular} \\ \hline
- 		\end{tabular}
- 	}
- \end{table}
-
-Im Großen und Ganzen ist MPAndroidChart die beste Option, da es eine der besten Dokumentationen hat, ferner hat es auch eine sehr hilfreiche Community, sehr viel gut gecodete und dokumentierte Beispiele und ist auch für Erweiterungen gut, da die Library auch auf einem iPhone benutzt werden kann.
- 
-AChartEngine hat eine gute Dokumentation doch eine eher kleine Community und ist leider nicht sehr aktuell. 
-HelloChart hat eine der schlechtesten Dokumentationen, gar keine Community und sehr wenig gecodete Beispiele, dafür gibt es hiervon aktuelle Versionen.
 
 \subsubsection*{Implementierung von MPAndroidChart}
 Als nächstes habe ich mithilfe der MPAndroidchart Library einige Graphen erstellt und sie mit Daten befüllt.
