Changed some text

--- a/diplomarbeit/sections/ch1_introduction/bestshift.tex
+++ b/diplomarbeit/sections/ch1_introduction/bestshift.tex
@@ -1,11 +1,16 @@
 \lfoot{Autor: Fitim Faiku}
 \subsection{Das Projekt BestShift}
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+BestShift ist ein Projekt das dem Fahrer als oberstes Ziel mehr Informationen während- und nach der Fahrt bieten soll. 
+Deshalb werden in unterschiedlichen Teilen des Projektes 
+diverse einzelne Komponenten einer hybriden Android Applikation und einer Hardware Schnittstelle für das ODB-II 
+Interface entwickelt. Der Fokus des Medientechnischen Aspektes dieses Projektes soll allerdings auf der Webapplikation,
+die das Team ebenfalls realisieren wird, liegen. Diese Webapplikation wird die Zentrale Schnittstelle der gesammelten Daten
+und der Retrospektiven Darstellung sein. 
+
+Für die Smartphone Applikation wird ein Android Framework verwendet, 
+während die Hardware aus einem Single Board Computer (SBC) bestehen soll. 
+Mittels einem ODB-II zu Bluetooth Chip (ELM237) und Python, 
+werden Daten aus dem Motormanagement sowie eigene Sensordaten gesammelt und aufbereitet. 
 
 \clearpage % DO NOT REMOVE
