--- a/diplomarbeit/sections/ch3_implementierung/android-app.tex
+++ b/diplomarbeit/sections/ch3_implementierung/android-app.tex
@@ -10,7 +10,7 @@ Für jede Klasse wurde ein XML Layout als View generiert, wodurch eine Verbindun
  Dabei achteten wir besonders auf die Benutzerfreundlichkeit der Applikation.
  Die wichtigsten Kriterien waren, dass der Fahrer im Straßenverkehr nicht abgelenkt wird, er sehr leicht zwischen den einzelnen Features wechseln kann und die Informationen intuitiv aufbereitet sind.
  
- Um die App zu realisieren erstellten wir mehrere Fragments zwischen denen man hin und her wischen, \textit{swipen}, kann.
+ Um die App zu realisieren erstellten wir mehrere Fragments zwischen denen man hin und her \textit{swipen} kann.
  
 
  Es wurde zuerst eine MainActivity Klasse erstellt, welche von FragementActivity erbt und von ActionTabListener implementiert, um die Methoden onTabReselected, onTabselected und onTabunselected zu überschreiben.   
@@ -58,7 +58,7 @@ Dies wird gemacht um zwischen den Oberflächen wechseln zu können.
  
 
 \subsubsection*{Implementierung von MPAndroidChart}
-Als nächstes habe ich mithilfe der MPAndroidchart Library einige Graphen erstellt und sie mit Daten befüllt.
+Als nächstes haben wir mithilfe der MPAndroidchart Library einige Graphen erstellt und sie mit Daten befüllt.
 
 \lstinputlisting[caption=Liniendiagramm Beispiel, style=javastyle]{code/Beschleunigungskraefte.java}
 
