Finished Ch3-WebApp, also reformatting

--- a/diplomarbeit/document.tex
+++ b/diplomarbeit/document.tex
@@ -79,10 +79,12 @@
 		\makeatletter
 		\@starttoc{lol}% Print List of Listings lol
 		\makeatother
+	\section{Anhänge}
+		
 	\section{Zeitaufzeichnungen}
-		\todo idk if necessary
+		\todo{} idk if necessary
 	\section{Glossar}
-		\todo this is going to be a female dog.
+		\todo{} this is going to be a female dog.
 \end{appendices}
 
 \end{document}
