--- a/diplomarbeit/sections/ch3_implementierung/web-app/prototype.tex
+++ b/diplomarbeit/sections/ch3_implementierung/web-app/prototype.tex
@@ -1,6 +1,4 @@
-\lfoot{Autor: Who?}
-\subsubsection{Best practices}
-\label{subsec:practices}
+\subsubsection{Prototypische Implementierung}
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -9,4 +7,4 @@ consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-\clearpage % DO NOT REMOVE
+\clearpage
