--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -251,3 +251,31 @@ title = {Native, Web or Hybrid Apps? What’s The Difference?},
 howpublished = "\url{http://www.mobiloud.com/blog/2012/06/native-web-or-hybrid-apps/}",
 note = {Accessed on 28.03.2016}
 }
+@misc{BOZH.CH3-verbrauchsanalyse.fuelconsumption, 
+author = {Unknown},
+year = {2014},
+title = {Konvertieren von Kraftstoffverbrauch von Gramm CO2 pro km (Benzin) nach Liter pro 100 Kilometer},
+howpublished = "\url{https://www.unitjuggler.com/fuelconsumption-umwandeln-von-gperkmgasoline-nach-lper100km.html}",
+note = {Accessed on 30.03.2016}
+}
+@misc{BOZH.CH3-verbrauchsanalyse.verbrauch, 
+author = {Hüseyin Bozkurt},
+year = {2016},
+title = {Verbrauchsanalyse Android SDK MPAndroidChart},
+howpublished = "",
+note = {Accessed on 30.03.2016}
+}
+@misc{BOZH.CH3-verbrauchsanalyse.MAFbasedConsumptionCalculator, 
+author = {Unknown},
+year = {2015},
+title = {MAP- and MAF-Based Air/Fuel Flow Calculator},
+howpublished = "\url{http://www.lightner.net/obd2guru/IMAP_AFcalc.html}",
+note = {Accessed on 30.03.2016}
+}
+@misc{BOZH.CH3-verbrauchsanalyse.FuelConsumptionFromOBD2PortParameters, 
+author = {bvbdort},
+year = {21.06.2013},
+title = {Fuel Consumption From OBDII Port Parameter},
+howpublished = "\url{http://stackoverflow.com/questions/17170646/fuel-consumption-from-obd2-port-parameters}",
+note = {Accessed on 30.03.2016}
+}
