changed sources to suit chapter names

--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -141,7 +141,7 @@
     note = {Accessed on 20.03.2016}
 }
 
-@misc{SIMR.CH2-CAN-Bus.SAEJ1962,
+@misc{SIMR.CH2-obd2.SAEJ1962,
     title={SAE J1962},
     year={1992-2015},
     publisher={SAE International},
@@ -149,7 +149,7 @@
     note={Accessed on 20.03.2016}
 }
 
-@misc{SIMR.CH2-CAN-Bus.AU-MVSA1989,
+@misc{SIMR.CH2-obd2.AU-MVSA1989,
     title={Vehicle Standard (Australian Design Rule 79/01 — Emission Control for Light Vehicles) 2005},
     year={2005},
     publisher={Australian Government},
@@ -157,7 +157,7 @@
     note={Accessed on 20.03.2016}
 }
 
-@misc{SIMR.CH2-CAN-Bus.EUP-D98/69/EC,
+@misc{SIMR.CH2-obd2.EUP-D98/69/EC,
     title={Directive 98/69/EC of the European Parliament and of the Council of 13 October 1998 relating to measures to be taken against air pollution by emissions from motor vehicles and amending Council Directive 70/220/EEC},
     year={2000},
     publisher={European Parliament},
@@ -165,7 +165,7 @@
     note={Accessed on 20.03.2016}
 }
 
-@misc{SIMR.CH2-CAN-Bus.OBDIITypeA,
+@misc{SIMR.CH2-obd2.OBDIITypeA,
     author = {Xoneca, Wikimedia User},
     title = {Shape of a female OBD-II type A connector.},
     year = {2015},
@@ -173,7 +173,7 @@
     howpublished="\url{https://commons.wikimedia.org/wiki/File:OBD-II_type_A_female_connector_shape.svg}"
 }
 
-@misc{SIMR.CH2-CAN-Bus.OBDIITypeB,
+@misc{SIMR.CH2-obd2.OBDIITypeB,
     author = {Xoneca, Wikimedia User},
     title = {Shape of a female OBD-II type B connector.},
     year = {2015},
@@ -197,7 +197,7 @@
     howpublished="\url{http://torque-bhp.com}"
 }
 
-@misc{SIMR.CH2-CAN-Bus.GolfOBD,
+@misc{SIMR.CH2-obd2.GolfOBD,
     author = {National Center for Automotive Science \& Technology at Weber State University},
     title = {Golf VI OBD Position},
     year = {unknown},
@@ -205,7 +205,7 @@
     howpublished="\url{http://www.obdclearinghouse.com/OBD-CH/documents/newdocuments/volkswagen/golf/2002.jpg}"
 }
 
-@misc{SIMR.CH2-CAN-Bus.PoloOBD,
+@misc{SIMR.CH2-obd2.PoloOBD,
     author = {Arturo R Montesinos},
     title = {Polo IV 9N3 OBD Position},
     year = {2011},
@@ -213,7 +213,7 @@
     howpublished="\url{https://www.flickr.com/photos/armk/5578899043}"
 }
 
-@misc{SIMR.CH2-CAN-Bus.3erOBD,
+@misc{SIMR.CH2-obd2.3erOBD,
     author = {Matt Shannahan (tahoerdr)},
     title = {BMW 3er E90 OBD Position},
     year = {unknown},
@@ -250,4 +250,108 @@ year = {2015},
 title = {Native, Web or Hybrid Apps? What’s The Difference?},
 howpublished = "\url{http://www.mobiloud.com/blog/2012/06/native-web-or-hybrid-apps/}",
 note = {Accessed on 28.03.2016}
+}
+
+@misc{SIMR.CH2-motorwirkungsgrad.BPSpillGeneral,
+	author = {Harry R. Weber},
+	year = {2010},
+	title = {Blown-out BP well finally killed at bottom of Gulf},
+	howpublished = "\url{http://archive.boston.com/news/nation/articles/2010/09/19/blown_out_bp_well_finally_killed_at_bottom_of_gulf/}",
+	note = {Accessed on 29.03.2016}
+}
+
+@misc{SIMR.CH2-motorwirkungsgrad.BPSpillDeaths,
+	author = {Jennifer  Viegas},
+	year = {2013},
+	title = {Record Dolphin, Sea Turtle Deaths Since Gulf Spill},
+	howpublished = "\url{http://news.discovery.com/animals/whales-dolphins/record-dolphin-sea-turtle-deaths-since-gulf-spill-130402.htm}",
+	note = {Accessed on 29.03.2016}
+}
+
+@misc{FAIF.CH3-fahrkomfortanalyse.KammscherKreis,
+	author = {hangon, Motorradfrage.net-User},
+	year = {2009},
+	title = {Wie sieht die Ausnutzung des Kammschen Kreises bei einer Traktionskontrolle inkl. Sport-ABS aus?},
+	howpublished = "\url{https://images.motorradfrage.net/media/fragen/bilder/wie-siehr-die-ausnutzung-des-kammschen-kreises-bei-einer-traktionskontrolle-inkl-sport-abs-aus/0_original.jpg?v=1257941203000}",
+	note = {Accessed on 29.03.2016}
+}
+
+@misc{SIMR.CH2-motorwirkungsgrad.FrackingChemicals,
+	author = {Theo Colborna, Carol Kwiatkowskia, Kim Schultza & Mary Bachrana},
+	year = {2011}
+	title = {Natural Gas Operations from a Public Health Perspective, p. 11},
+	howpublished = "\url{http://www2.cce.cornell.edu/naturalgasdev/documents/pdfs/fracking%20chemicals%20from%20a%20public%20health%20perspective.pdf}",
+	note = {Accessed on 29.03.2016}
+}
+
+@misc{SIMR.CH2-motorwirkungsgrad.FrackingGroundwater,
+	author = {TEDX, The Endocrine Disruption Exchange, Dr. Theo Colborn},
+	year = {2009}
+	title = {Chemicals in Natural Gas Operations, Introduction},
+	howpublished = "\url{https://web.archive.org/web/20120414043256/http://www.endocrinedisruption.com/chemicals.introduction.php}",
+	note = {Accessed on 29.03.2016}
+}
+
+@misc{SIMR.CH2-motorwirkungsgrad.SeaLevelRiseCentury,
+	author = {Mary Beth Griggs},
+	year = {2015},
+	title = {NASA: Sea Level Rise is going to get much worse},
+	howpublished = "\url{http://www.popsci.com/nasa-sea-level-rise-going-get-much-worse}",
+	note = {Accessed on 29.03.2016}	
+}
+
+@misc{SIMR.CH2-motorwirkungsgrad.SeaLevelRiseAllOilBurnt,
+	author = {Mary Beth Griggs},
+	year = {2015},
+	title = {What would happen if we burned all the fossil fuels on earth?},
+	howpublished = "\url{http://www.popsci.com/burning-all-fossil-fuels-could-raise-sea-levels-by-200-feet}",
+	note = {Accessed on 29.03.2016}	
+}
+
+@misc{SIMR.CH2-motorwirkungsgrad.bpOilSpillSatelite,
+	author = {NASA},
+	year = {2010},
+	title = {Deepwater Horizon Oil Spill - May 24, 2010},
+	howpublished = "\url{https://en.wikipedia.org/wiki/Deepwater_Horizon_oil_spill#/media/File:Deepwater_Horizon_oil_spill_-_May_24,_2010_-_with_locator.jpg}",
+	note = {Accessed on 30.03.2016}	
+}
+
+@misc{SIMR.CH2-motorwirkungsgrad.frackingDescription,
+	author = {Hannah Otto},
+	year = {2013},
+	title = {HSI-STEM 2015 Summer Institute - Geology-- Fracking Resources},
+	howpublished = "\url{http://www.napavalley.edu/Library/Pages/HSI-STEM-2015-Summer-Institute---Fracking-Resources.aspx}",
+	note = {Accessed on 30.03.2016}	
+}
+
+@misc{SIMR.CH2-obd2.HextoBinary,
+	author = {69.165.170.184, Wikipedia User},
+	year = {2011},
+	title = {Mode 1 PID 00},
+	howpublished = "\url{https://en.wikipedia.org/wiki/OBD-II_PIDs#Mode_1_PID_00}",
+	note = {Accessed on 30.03.2016}	
+}
+
+@misc{SIMR.CH2-motorwirkungsgrad.4strokeEngine,
+	author = {Loeti, SBZ Monteur User},
+	year = {2014},
+	title = {Erklär mal: Vier-Takt Motor},
+	howpublished = "\url{http://www.sbz-monteur.de/2014/10/15/erklaer-mal-vier-takt-motor/}",
+	note = {Accessed on 30.03.2016}	
+}
+
+@misc{SIMR.CH2-motorwirkungsgrad.Motorschwingungen,
+	author = {Dipl.-Ing. Daniel Schlote},
+	year = {2013},
+	title = {Motorschwingungen besser reduzieren},
+	howpublished = "\url{https://www.fraunhofer.de/de/presse/presseinformationen/2013/Maerz/motorschwingungen-besser-reduzieren.html}",
+	note = {Accessed on 30.03.2016}	
+}
+
+@misc{SIMR.CH2-motorwirkungsgrad.SchwingungenMotorkennfeld,
+	author = {Kojak68, Cosmiq.de User},
+	year = {2009},
+	title = {Warum verbraucht man wenn man schnell fährt auf derselben Strecke (zB 100km) mehr Benzin, als wenn man diese Strecke langsam fährt?},
+	howpublished = "\url{http://www.cosmiq.de/qa/show/2225576/Warum-verbraucht-man-wenn-man-schnell-faehrt-auf-derselben-Strecke-zB-100km-mehr-Benzin-als-wenn-man-diese-Strecke-langsam-faehrt/}",
+	note = {Accessed on 30.03.2016}	
 }
