Finished technical basics for engine efficiency *) Added images *) Described which effects affect a car while in motion *) Described vibrations of the engine and how they can and should be avoided

--- a/diplomarbeit/sections/ch3_implementierung/schaltvorschlag.tex
+++ b/diplomarbeit/sections/ch3_implementierung/schaltvorschlag.tex
@@ -1,11 +1,13 @@
 \lfoot{Autor: Raphael Simsek}
 \subsection{Schaltvorschlag}
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+%2 Realisierung (Realisation)
+%Leitfragen:
+%→ Von welchem Stand der Technik im Umfeld der Aufgabenstellung wurde ausgegangen?
+%→ Welche Lösungsansätze wurden grundsätzlich gesehen?
+%→ Warum wurde ein bestimmter Lösungsansatz gewählt?
+%→ Welche experimentelle, konstruktive oder softwaretechnische Methodik wurde angewendet?
+%→ Auf welche fachtheoretischen Grundlagen wurde aufgebaut?
+%→ Welche wirtschaftlichen Überlegungen wurden angestellt?
 
 \clearpage % DO NOT REMOVE
