--- a/diplomarbeit/sections/ch4_wirtschaftlichkeit/kunden.tex
+++ b/diplomarbeit/sections/ch4_wirtschaftlichkeit/kunden.tex
@@ -1,11 +1,39 @@
-\lfoot{Autor: Daniel Melichar}
+\lfoot{Autor: Hüseyin Bozkurt}
 \subsection{Potentielle Kunden}
+Das Projekt BestShift verfügt über ein großes Vermarktungspotenzial.
+Aufgrunddessen stellen wir unsere Potentiellen Kunden in verschiedenen Szenarien dar.
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+\subsubsection{Szenario 1: Fahrschulen}
+Ein Mehrwert an unserem Produkt könnten Fahrschulen haben. Wir bieten Fahrschulen
+Lizenzen zur Nutzung für einen Fahrschüler/einer Fahrschülerin. Die Lizenz wird bei der Einschreibung des
+Schülers/der Schülerin in die Fahrschule erstellt und freigegeben. Dieser/Diese kriegt während seiner
+Fahrstunden ein Objektives Feedback, welches in manchen Situationen sinnvoller ist,
+als wenn die Person Feedback von dem Fahrlehrer/der Fahrlehrerin kriegt.
+Im Nachhinein kann auf der BestShift Webapplikation genauer nachgesehen werden,
+um genau den Lerneffekt imstande zu halten und genauer zu analysieren, was genau
+das Fehlverhalten des Fahrschülers war.
+Da der Empfänger den Inhalt der Nachricht bestimmt, kann die Meinung des Lehrbeauftragten
+Falsch aufgenommen werden. Hier ist es besonders wichtig, ein stabiles Fundament für 
+effizientes und umweltschonendes Fahren zu legen. 
+
+
+\subsubsection{Szenario 2: Speditionen}
+Bei Speditionsfirmen ist es besonders wichtig, den Verbrauch von Fossilen Brennstoffen gering zu halten, um
+im Endeffekt eine größere Gewinnspanne zu erzielen. Allerdings sind LastkraftfahrerInnen äußerst Erfahren und
+sollten kein Feedbacksystem oder einen Gangschaltvorschlag benötigen. Die Verbrauchsanalyse von BestShift ist hierbei
+das Interessante.
+
+
+\subsubsection{Szenario 3: Taxiunternehmen}
+Für Taxiunternehmen ist BestShift optimal. Die Verbrauchsanalyse ist von vornhinein schon für Kurzfahrtstrecken
+konzipiert. Der Schaltvorschlag ist für anfangende TaxifahrerInnen ebenfalls wichtig.
+Das wichtigste Feature ist allerdings der Fahrgastkomfort, welcher anzeigt mit welcher Stärke der Passagier
+im inneren des Kraftfahrzeugs hin und her geschleudert wird. Indem der Kamm'sche Kreis von BestShift keine 
+extraordinären Ausschläge anzeigt, bedeutet es, dass der Lenker eine ausgezeichnete Leistung erbracht hat.
+Starke Brems/Beschleunigungsmanöver oder zu schnell in die Kurve gefahren? Diese Faktoren spielen
+für den Komfort des Kunden eine große Rolle. Ein Taxiunternehmen könnte auch ein Rating-System auf unserer
+Webapplikation benötigen, um zu zeigen wer der bequemste Lenker des Unternehmens ist.
+Die Social-Media anbindung von BestShift ermöglicht Kunden des Taxiunternehmen ebenfalls, ihren Lenkern oder
+Lenkerinnen eine Benotung zu geben. 
 
 \clearpage % DO NOT REMOVE
