--- a/diplomarbeit/sections/ch2_technische_grundlagen/can-bus/thermodynamik.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/can-bus/thermodynamik.tex
@@ -48,7 +48,7 @@ Verlorene Energie bei der Verbrennung:
 	\item Durch Zylinderwände: 33\% Abwärme, Teil davon für die Heizung
 	\item Motorreibung: Reibung verlangt der Motorbewegung 8\% der Gesamtenergie ab
 \end{itemize}
-So bleiben im besten Falle 25\% über, die auf die Reifen übertragen werden. Diese 25\% sind zumeist nur unter Volllast erreichbar. Neue TDI Diesel-Motoren schaffen im Optimalfall einen Wirkungsgrad von 30\%, das ist aber bei Verbrennungsmotoren das Optimum. Wenn man nun aber Verbrauchsschonend fährt, so erreicht man meist nur einen Wirkungsgrad von 10\%. \todo{einarbeiten, dass deshalb beim Schaltvorschlag weit gedreht werden muss} Diese wenige Energie die der Motor, aus dem Tropfen Kraftstoff, der eingespritzt wird, erlangt, wird dann durch folgende Widerstände erneut geschwächt:
+So bleiben im besten Falle 25\% über, die auf die Reifen übertragen werden. Diese 25\% sind zumeist nur unter Volllast erreichbar. Neue TDI Diesel-Motoren schaffen im Optimalfall einen Wirkungsgrad von 30\%, das ist aber bei Verbrennungsmotoren das Optimum. Wenn man nun aber Verbrauchsschonend fährt, so erreicht man meist nur einen Wirkungsgrad von 10\%. Diese wenige Energie die der Motor, aus dem Tropfen Kraftstoff, der eingespritzt wird, erlangt, wird dann durch folgende Widerstände erneut geschwächt:
 \textit{direktes Zitat: \cite{SIMR.CH1-Fahrstil-Analyse.Motorkennfeld}}
 \begin{itemize}
 	\item Beschleunigungswiderstand: Das Beschleunigen eines Körpers braucht Energie. Die Energie wächst quadratisch mit der Geschwindigkeit, sie bleibt aber als \textit{kinetische Energie} in der Geschwindigkeit. 
