--- a/diplomarbeit/sections/ch2_technische_grundlagen/main.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/main.tex
@@ -1,8 +1,8 @@
 \section{Technische Grundlagen}
 \label{sec:techngrund}
 
-\subsection{CAN-Bus}
-\todo{Kapitelnamen}
+\subsection{Fahrzeugtechnik}
+\comment{SIMR: Kapitelnamen - fixed?}
 \input{sections/ch2_technische_grundlagen/can-bus/obd2.tex}
 \input{sections/ch2_technische_grundlagen/can-bus/thermodynamik.tex}
 \input{sections/ch2_technische_grundlagen/can-bus/schadstoffausstoss.tex}
