--- a/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/programmiersprachen.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/programmiersprachen.tex
@@ -4,13 +4,7 @@
 \textbf{Entwicklungsumgebung\newline}
 Android Studio ist die offizielle Entwicklungsumgebung für Android Applikationen.
 Android Studio basiert auf IntelliJ IDEA und ersetzt das Android Developer Tool für Eclipse, da dieses seit Ende
-2015 keinen Support mehr erhält.
-
-\textbf{Programmiersprachen\newline}
-Bei den Programmiersprachen bestand die Auswahl zwischen der Programmiersprache Python, 
-native Javaentwicklung und Hybrid Java in Verbindung mit HTML.
-Dabei fiel für uns vor allem aufgrund von der Verbindung mit einer Webapplikation die Wahl auf eine hybride Applikation. 
-Der Funktionsumfang des Android Studios sind: 
+2015 keinen Support mehr erhält. Der Funktionsumfang des Android Studios sind:
 \begin{itemize}
 \item Build-Management-Automatisierung: Basierend auf Gradle, Entwicklungsmöglichkeiten für verschiedene Gerätetypen (Tablets etc.)
 \item Android Wear/Android TV: Stets auf dem neuesten Stand der Technik können Applikationen für neue Geräte implementiert werden.
@@ -31,6 +25,12 @@ Der Funktionsumfang des Android Studios sind:
 \item mind. 1280*800 Pixel Bildschirmauflösung
 
 \end{itemize}
+\textbf{Programmiersprachen\newline}
+Bei den Programmiersprachen bestand die Auswahl zwischen der Programmiersprache Python, 
+native Javaentwicklung und Hybrid Java in Verbindung mit HTML.
+Dabei fiel für uns vor allem aufgrund von der Verbindung mit einer Webapplikation die Wahl auf eine hybride Applikation. 
+ 
+
 
 \clearpage
 \subsection{Vergleich Java und Python}
