--- a/diplomarbeit/sections/ch1_introduction/bestshift.tex
+++ b/diplomarbeit/sections/ch1_introduction/bestshift.tex
@@ -4,9 +4,10 @@
 BestShift ist ein Projekt das dem Fahrer als oberstes Ziel mehr Informationen während- und nach der Fahrt bieten soll. 
 Deshalb werden in unterschiedlichen Teilen des Projektes 
 diverse einzelne Komponenten einer hybriden Android Applikation und einer Hardware Schnittstelle für das ODB-II 
-Interface entwickelt. Der Fokus des Medientechnischen Aspektes dieses Projektes soll allerdings auf der Webapplikation,
-die das Team ebenfalls realisieren wird, liegen. Diese Webapplikation wird die Zentrale Schnittstelle der gesammelten Daten
-und der Retrospektiven Darstellung sein. 
+Interface entwickelt. Der Fokus des Medientechnischen Aspektes dieses Projektes soll allerdings auf der Webapplikation, die das Team ebenfalls realisiert hat. 
+Die Web-App ist dafür gedacht, dass Fahrten retrospektiv betrachtet werden können.
+Wodurch wir uns besonders hervorheben ist, dass wir das anlegen und verwalten von Accounts ermöglichen welches mit einer Social-Media Anbindung ausgestattet ist.
+ 
 
 Für die Smartphone Applikation wird ein Android Framework verwendet, 
 während die Hardware aus einem Single Board Computer (SBC) bestehen soll. 
