--- a/diplomarbeit/sections/ch2_technische_grundlagen/can-bus/schadstoffausstoss.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/can-bus/schadstoffausstoss.tex
@@ -2,11 +2,6 @@
 \subsubsection{Schadstoffausstoss}
 \label{subsec:schadstoffausstoss}
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Den verbrauch der Energie eines Fahrzeugs sieht man am Auspuff, wenn CO2 mit diversen Abgasen rauskommt. 
 
 \clearpage % DO NOT REMOVE
