fixed wrong subsection issue

--- a/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/programmiersprachen.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/programmiersprachen.tex
@@ -33,8 +33,8 @@ Dabei fiel für uns vor allem aufgrund von der Verbindung mit einer Webapplikati
 
 
 \clearpage
-\subsection{Vergleich Java und Python}
-\subsubsection{Java}
+\subsubsection{Vergleich Java und Python}
+\subsubsubsection{Java}
 \begin{itemize}
 \item Charakteristik: Mehrfachverwendung/Mehrfachvererbung eingeschränkt, stark typisiert
 \item Syntax: Vor der Kompilierung sehr streng, komplizierte Polymorphie
@@ -44,7 +44,7 @@ Dabei fiel für uns vor allem aufgrund von der Verbindung mit einer Webapplikati
 \item Können im Team: 5/5*, jahrelange Erfahrung innerhalb des Teams
 \end{itemize}
 
-\subsubsection{Python}
+\subsubsubsection{Python}
 \begin{itemize}
 \item Charakteristik: Erstellung von Variablen nicht Datentyp abhängig, dynamisch/schwach typisiert.
 \item Syntax: erhöhte Lesbarkeit im Vergleich zu allen anderen, aber ungewohnter zu schreiben als Java
