--- a/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/app-fundam.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/app-fundam.tex
@@ -7,17 +7,10 @@ Die Android SDK-Tools kompilieren Code zusammen mit allen Ressourcen-Dateien in 
 Eine APK ist ein Android-Paket, welches alle Inhalte einer Android App enthält. 
 Die APK-Datei wird dann auf das Android-Gerät installiert. 
 
-Bei der Umsetzung unserer Android Applikation, hatten wir die Entscheidung, wie wir die Android App erstellen. 
-Da Android mehrere Programmierarten unterstützt musste Evaluiert werden welche Programmiersprache für unsere App am Besten geeignet ist. \nextline
 
 \textbf{Native vs HTML5 vs Hybrid}
-\todo{MELD: Allg. Beschreibung} 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum \cite{FAIF.CH2-android-dev.NativeWeborHybrid}. 
+Bei der Umsetzung unserer Android Applikation, hatten wir die Entscheidung, wie wir die Android App erstellen. 
+Da Android mehrere Programmierarten unterstützt musste Evaluiert werden welche Programmiermodule für unsere App am Besten geeignet ist. \nextline
 
 \textbf{Native\newline} 
 Eine Native App wird fuer die IOS und Android Plattformen verwendet wobei die Programmiersprachen dafuer Objektiv C und Java sind.
