--- a/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/app-fundam.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/app-fundam.tex
@@ -1,4 +1,4 @@
-\lfoot{Autor: Who?}
+\lfoot{Autor: Fitim Faiku}
 \subsubsection{Grundsätze einer Android Applikation}
 \label{subsec:aapp-fundam}
 
@@ -33,5 +33,4 @@ Hybrid Apps sind eine Mischung von Nativ und HTML5 Apps. Hybrid bietet das Beste
 
 \todo{MELD: Kommt in Ch3}
 Schlussendlich entschieden wir uns fuer die Nativ Wariante, da wir gute Kenntnisse in Java haben und Nativ die Beste Performance fuer die Daarstellung der Daten hat.
->>>>>>> Reformatting
 \clearpage % DO NOT REMOVE
